multiarch improvements to spice deps

--- a/celt051/Makefile
+++ b/celt051/Makefile
@@ -17,6 +17,8 @@ USE_TOOLS+=	pkg-config
 
 PKGCONFIG_OVERRIDE+=	celt.pc.in
 
+USE_MULTIARCH=lib
+
 .include "../../mk/bsd.prefs.mk"
 .include "../../mk/oss.buildlink3.mk"
 
