--- a/usbredir/Makefile
+++ b/usbredir/Makefile
@@ -17,5 +17,6 @@ USE_TOOLS+=	pkg-config
 
 PKGCONFIG_OVERRIDE+=	usbredirhost/libusbredirhost.pc.in
 PKGCONFIG_OVERRIDE+=	usbredirparser/libusbredirparser.pc.in
+USE_MULTIARCH=lib
 
 .include "../../mk/bsd.pkg.mk"
